fix intellij warnings in styx-client